# SandpileSimulator

./: .gitignore  CMakeLists.txt  EXAMPLES  README  README.md
doc/: Doxyfile.in
doc/template/: footer.html  header.html  main_page.cpp  style.css
src/headers/: argumentparser.h  aux.h  avalanche.h  avalanchestatistics.h  logger.h  momentanalysis.h  noncopyable.h  plotter.h  randomizer.h  sandbox.h  simulationmanager.h  simulationmodel.h  simulationmodel_btw.h  simulationmodel_fwm.h  simulator.in.h  version.h
src/sources/: argumentparser.cpp  aux.cpp  avalanche.cpp  avalanchestatistics.cpp  logger.cpp  main.cpp  momentanalysis.cpp  noncopyable.cpp  plotter.cpp  randomizer.cpp  sandbox.cpp  simulationmanager.cpp  simulationmodel.cpp  simulationmodel_btw.cpp  simulationmodel_fwm.cpp  simulator.cpp
